Tests/Negative/PrivateFunCall.mr
mod Engine {
    fun start() {}
}

fun main(): i32 {
    Engine.start();
    return 0;
}
